kubernetes/00-namespace-secrets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: meeting-room-system
